...
        />
        <Tabs.Screen
          name="menus"
          options={{
            title: "献立",
            tabBarIcon: ({ color, size }) => <Ionicons name="book-outline" size={size} color={color} />,
            tabBarButtonTestID: "tab-menus",
          }}
        />
        <Tabs.Screen
          name="meals"
          options={{
            title: "スキャン",
...
                marginBottom: 16,
              }}>
                <Ionicons name="scan" size={24} color="#fff" />
              </View>
            ),
            tabBarLabel: () => null,
            tabBarButtonTestID: "tab-meals",
          }}
        />
        <Tabs.Screen
          name="favorites"
          options={{ href: null }}
        />
...
